--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .col-2{
-  width: 35rem;
+  width: 25%;
 
   margin: auto;
 
@@ -97,7 +97,7 @@ form label{
 }
 
 .formulario input{
-  width: 35rem;
+  width: 100%;
   height: 5rem;
   border-radius: .5rem;
   border: 1px solid #E8E8E8;
@@ -183,11 +183,10 @@ a{
   margin-right: 1rem;
 }
 
-form p{
-  width: 35rem;
-  position: absolute;
+
+.footer p{
+  padding-top: 10rem;
   text-align: center;
-  bottom: 5rem;
 
   font-family: 'Lato';
   font-style: normal;
@@ -196,4 +195,27 @@ form p{
   line-height: 19px;
 
   color: #1A202C;
+}
+
+@media only screen and (max-width: 976px){
+  .col-1{
+    display: none;
+  }
+
+  .col-2 {
+    width: 60%;
+
+    margin: auto;
+
+  }
+}
+
+@media only screen and (max-width: 595px) {
+   .col-2 {
+     width: 80%;
+
+     margin: auto;
+
+   }
+
 }
